HUE-6077 [frontend] Fix alert close button alignment
(cherry picked from commit a4692100671151c2777fdc5b5b34e0319a20a1c4)

--- a/desktop/core/src/desktop/static/desktop/less/hue-cui-overrides.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cui-overrides.less
@@ -68,5 +68,9 @@
 }
 
 .form-inline label, .form-horizontal label, .form-vertical label, .form-inline .control-label, .form-horizontal .control-label, .form-vertical .control-label {
-  font-weight: normal!important;
+  font-weight: normal !important;
+}
+
+.alert .close {
+  width: 16px !important;
 }
